# sol-defi

./: Cargo.toml  README.md  my-keypair.json
src/: entrypoint.rs  error.rs  lib.rs  processor.rs  state.rs
src/instructions/: faucet_instruction.rs  init_instruction.rs  instruction.rs  mod.rs
