[package]
name = "sol-defi"
version = "0.1.0"
edition = "2021"

[features]
test-bpf = []
no-entrypoint = []

[dependencies]
solana-program = "1.9.4"
spl-token = {version = "3.2.0", features = ["no-entrypoint"] }
borsh = "0.9.1"
borsh-derive = "0.9.1"
arrayref = "0.3.6"

[lib]
crate-type = ["cdylib", "lib"]